--- a/drupal-6.15/sites/all/themes/basic/css/layout.css
+++ b/drupal-6.15/sites/all/themes/basic/css/layout.css
@@ -12,13 +12,28 @@
 */
 
 #page {
-	width: 960px; /* edit to change the width of the page */
+	/*width: 960px; /* edit to change the width of the page */
 	margin: 0 auto; /* remove 'auto' and the width to switch to a fluid width */
 	margin-top: 30px;
 	-moz-border-radius: 20px;
+    border: 3px dotted #ffbe62;
 	padding: 15px;
+    /*
+    border: 4px solid #d0d6e8;
+    background: #dedede;
+*/
+}
 
-
+#footer {
+	width: 960px; /* edit to change the width of the page */
+	margin: 0 auto; /* remove 'auto' and the width to switch to a fluid width */
+	margin-top: 10px;
+	-moz-border-radius: 20px;
+    border: 4px solid #d0d6e8;
+	padding: 10px;
+    background: #dedede;
+    text-align: center;
+}
 /** LAYOUT RULES
 ---------------------------------
 *  do not change if you're not sure you know what you're doing
