--- a/drupal-6.15/sites/all/themes/basic/css/layout.css
+++ b/drupal-6.15/sites/all/themes/basic/css/layout.css
@@ -12,26 +12,23 @@
 */
 
 #page {
-	/*width: 960px; /* edit to change the width of the page */
+	width: 1000px; /* edit to change the width of the page */
 	margin: 0 auto; /* remove 'auto' and the width to switch to a fluid width */
+    /*
 	margin-top: 30px;
 	-moz-border-radius: 20px;
     border: 3px dotted #ffbe62;
 	padding: 15px;
-    /*
     border: 4px solid #d0d6e8;
     background: #dedede;
 */
 }
 
+
 #footer {
-	width: 960px; /* edit to change the width of the page */
 	margin: 0 auto; /* remove 'auto' and the width to switch to a fluid width */
-	margin-top: 10px;
-	-moz-border-radius: 20px;
-    border: 4px solid #d0d6e8;
-	padding: 10px;
-    background: #dedede;
+	height: 120px;
+    background: #ffffcc url(images/footer-bg.png) no-repeat bottom center;
     text-align: center;
 }
 /** LAYOUT RULES
@@ -41,9 +38,9 @@
 
 #content {
   float: left;
-  width: 100%;
+  width: 80%;
   margin-right: -100%;
-  padding: 0;
+  padding-left: 40px;
 }
 .sidebar {
   float: left;
